# cartridges

./: .gitignore  PKGBUILD
cartridges/: cartridges.in  details_dialog.py  game.py  game_cover.py  game_data.py  game_sort_filter.py  main.py  meson.build  window.py
cartridges/importer/: desktop_source.py  steam_source.py
cartridges/logging/: session_file_handler.py
cartridges/store/: store.py
cartridges/store/managers/: display_manager.py  file_manager.py
cartridges/utils/: save_cover.py  steam.py  steamgriddb.py
data/gtk/: game.blp  style.css
scripts/: local-build.sh
tests/: test_game_cover.py  test_game_data.py  test_game_sort_filter.py  test_steam.py
